# Python_Web_HW02

./: .gitignore  AddressBook.py  Bot.py  Dockerfile  __main__.py  info.py  logs.txt  pyproject.toml
